--- a/index.html
+++ b/index.html
@@ -2,14 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TinDog Startup</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TinDog</title>
 </head>
-<h1>Hello</h1>
+
 <body>
 
+  <!-- Title -->
+  <section id="title">
+
+  </section>
+  <!-- Features -->
+  <section id="features">
+
+  </section>
+  <!-- Testimonial -->
+  <section id="testimonial">
+
+  </section>
+  <!-- Pricing -->
+  <section id="pricing">
+
+  </section>
+  <!-- Footer -->
+  <section id="footer">
+
+  </section>
 </body>
 
 </html>
